--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "url": "git@github.com:eea/volto-resize-helper.git"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.10.0",
     "@plone/scripts": "*",
+    "@cypress/code-coverage": "^3.10.0",
+    "cypress-fail-fast": "^5.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "md5": "^2.3.0"
   },
